--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
   <div class="content">
     <div class="title"><span>My Gallery</span></div>
     <div class="text">
-    <img src="../Responsive Personal Portfolio Website/Images/e.jpg" width="200" height="250" > 
+    <img src="/Images/e.jpg" width="200" height="250" > 
     <img src="../Responsive Personal Portfolio Website/Images/b.jpeg"  width="200" height="250">
     <img src="../Responsive Personal Portfolio Website/Images/c.jpeg"  width="200" height="250">
     <img src="../Responsive Personal Portfolio Website/Images/f.jpg"  width="200" height="250">
