--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div class="title"><span>About Me</span></div>
   <div class="about-details">
     <div class="left">
-      <img src="images/about.jpg" alt="">
+      <img src="Images/about.jpg" alt="">
     </div>
     <div class="right">
       <div class="topic">Development Is My Passion</div>
@@ -148,10 +148,10 @@
     <div class="title"><span>My Gallery</span></div>
     <div class="text">
     <img src="Images/e.jpg" width="200" height="250" > 
-    <img src="../Responsive Personal Portfolio Website/Images/b.jpeg"  width="200" height="250">
-    <img src="../Responsive Personal Portfolio Website/Images/c.jpeg"  width="200" height="250">
-    <img src="../Responsive Personal Portfolio Website/Images/f.jpg"  width="200" height="250">
-    <img src="../Responsive Personal Portfolio Website/Images/a.jpg"  width="200" height="250">
+    <img src="Images/b.jpeg"  width="200" height="250">
+    <img src="Images/c.jpeg"  width="200" height="250">
+    <img src="Images/f.jpg"  width="200" height="250">
+    <img src="Images/a.jpg"  width="200" height="250">
   </a>
       <div class="button"></div>
       <div class="topic"></div>
