--- a/index.html
+++ b/index.html
@@ -92,6 +92,10 @@
          <div class="per">90%</div>
        </div>
        <div class="box">
+         <div class="topic">Python Programming Language</div>
+         <div class="per">90%</div>
+       </div>
+       <div class="box">
          <div class="topic">SQL</div>
          <div class="per">100%</div>
        </div>
@@ -101,7 +105,7 @@
        </div>
        <div class="box">
          <div class="topic">Data Structure and Algorithm</div>
-         <div class="per">60%</div>
+         <div class="per">80%</div>
        </div>
      </div>
    </div>
