--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
       <div class="topic"></div>
       <p>Mob.No.:-8651534005</p>
       <p>Email:-adarshkumar4541@gmail.com</p>
-      <p>Address:-Siwan Bihar</p>
+      <p>Address:-Vill-Maghi PO-Lakshmiganj PS-Maharajganj Dist-Siwan, Bihar, 841439</p>
       <div class="button">
         <button>Let's Chat</button>
       </div>
