--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
           </div>
       </ul>
       <div class="media-icons">
-        <a href="#"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://m.facebook.com/100041860931221/"><i class="fab fa-facebook-f"></i></a>
         <a href="#"><i class="fab fa-twitter"></i></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.instagram.com/adarsh.singh28/"><i class="fab fa-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/adarsh-kumar-prasad-b112821a6/"><i class="fab fa-linkedin"></i></a>
       </div>
     </div>
     <div class="menu-btn">
@@ -174,6 +175,12 @@
       <p>Address:-Vill-Maghi PO-Lakshmiganj PS-Maharajganj Dist-Siwan, Bihar, 841439</p>
       <div class="button">
         <button>Let's Chat</button>
+      </div>
+       <div class="media-icons">
+        <a href="https://m.facebook.com/100041860931221/"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://www.instagram.com/adarsh.singh28/"><i class="fab fa-instagram"></i></a>
+        <a href="#"><i class="fab fa-twitter"></i></a>
+        <a href="https://www.linkedin.com/in/adarsh-kumar-prasad-b112821a6/"><i class="fab fa-linkedin"></i></a>
       </div>
     </div>
   </div>
