--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8">
-    <title> Responsive Portfolio Website | CodingLab </title>
+    <title> Responsive Portfolio Website | </title>
     <link rel="stylesheet" href="style.css">
     <!-- Fontawesome CDN Link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
@@ -66,7 +66,7 @@
     </div>
     <div class="right">
       <div class="topic">Development Is My Passion</div>
-      <p>My Name is Adarsh Kumar Prasad.I belongs to Siwan Bihar.Currently I am pursuing B.tech in computer science engineering from Sitamarhi Institute of Techology and my current CGPA is 7.67cgpa.I have done 10th and 12th with 70% and 76% marks respectively from BSEB Board.My hobies is playing cricket,reading book etc.My strenth is I am is good learner,Hard Worker and innovative as well.Coming to my Technical part I have good knowledge os Java Programming Language,SQL,Data Structur,etc.Apart from this I have done many certification course.And Last I have done a project.</p>
+      <p>My Name is Adarsh Kumar Prasad.I belongs to Siwan Bihar.Currently I am pursuing B.tech in computer science engineering from Sitamarhi Institute of Techology and my current CGPA is 7.67cgpa.I have done 10th from Rahul High School Karnpura Siwan and 12th from R.A.S.N.S College Kishunpura Madarpur Siwan  with 70% and 76% marks respectively from BSEB Board.My hobies is playing cricket,reading book etc.My strength is I am is good learner,Hard Worker and innovative as well.Coming to My Technical part I have good knowledge as Java Programming Language,Python,SQL,Data Structur,etc.I have Good Problem Solving Skill.Apart from this I have done many certification course.And Last I have done Many projects.</p>
       <div class="button">
         <input type="button" value="Download CV" onclick="window.open('https://drive.google.com/file/d/1fK37VC3XJZdLpEsreiaPd8QGWUmctf3O/view?usp=sharing')" />
       </div>
