--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
       </div>
       <div class="topic">Project Title</div>
       <p>Agrivyapar</p>
+       <a href="agrisvyapar.com"</a>
     </div>
-      
       </div>
       <div class="topic">Project Idea</div>
       <p>We are going to build a platform on which every Farmer can buy or order any goods(Urea, pesticides, Insecticide, fertilizers) or item(like water pump) that they need in their day to day life to perform the best agriculture practice at a minimal price or rate.</p>
@@ -147,6 +147,7 @@
  •	*Database:- We will use MongoDB as a database because it will serve better experience to us and it is easy to use.
  </p>
     </div>
+
 <!-- Gallery -->
   <section class="Gallery" id="Gallery">
   <div class="content">
