--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
       <div class="text">
       </div>
       <div class="topic">Project Title</div>
-      <p>Agrivyapar</p>
-       <a href="agrisvyapar.com"</a>
+       <p>Agrivyapar</p>
+         <a href="agrisvyapar.com"></a>
     </div>
       </div>
       <div class="topic">Project Idea</div>
