--- a/index.html
+++ b/index.html
@@ -146,6 +146,15 @@
  •	*Database:- We will use MongoDB as a database because it will serve better experience to us and it is easy to use.
  </p>
     </div>
+    <section class="2nd" id="Project"></section>
+    <div class="topic">2.Project</div>
+      <p>SCHOOL WEBSITE (<a href="https://github.com/Adarshkumar1234/SCHOOL-WEBSITE">Link</a>)</p>
+    </div>
+    <section class="3rd" id="Project"></section>
+    <div class="topic">3.Project</div>
+      <p>LEARNING CAMP:-Learning Camp used to Download and upload their notes and any one can upload their notes,book, materials etc.Then after they buy and sell their notes and material at minimum price</p>
+
+    </div>
 
 <!-- Gallery -->
   <section class="Gallery" id="Gallery">
