--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       <div class="text">
       </div>
       <div class="topic">Project Title</div>
-       <p>Agrivyapar (<a href="https://agrisvyapar.com/">agrisvyapar.com</a>)</p>
+       <p>Agrivyapar (<a href="https://agrisvyapar.com/">agrivyapar.com</a>)</p>
     </div>
       </div>
       <div class="topic">Project Idea</div>
