--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
           <li><a href="#about">About</a></li>
           <li><a href="#skills">Skills</a></li>
           <li><a href="#project">Project</a></li>
+          <li><a href="#Certification">Certification</a></li>
           <li><a href="#Gallery">Gallery</a></li>
           <li><a href="#contact">Contact</a></li>
           <div class="cancel-btn">
@@ -159,6 +160,26 @@
     <div class="topic">4.Project</div>
       <p>STUDENT MANAGEMENT SYSTEM (<a href="https://github.com/Adarshkumar1234/Student-Management-System">Link</a>)</p>
     </div>
+
+<!-- Certification-->
+    <section class="Certification" id="Certification">
+      <div class="content">
+        <div class="title"><span>My Certifications</span></div>
+        <div class="text">
+          <p>1. Python Training - E & ICT Academy, IIT Kanpur  (<a href="https://drive.google.com/file/d/1HjQxHPOdnlJj7ul148UQ1Z_YwAIeDU23/view?usp=sharing">View Certificate</a>)</p>
+          <p>2. Introduction to Algorithm and Analysis - NPTEL  (<a href="https://drive.google.com/file/d/1HhL0ndwxphONaCdEKEZfWKWRMJfx9nxJ/view?usp=sharing">View Certificate</a>)</p>
+          <p>3. TCS iON Career Edge - Young Professional  (<a href="https://drive.google.com/file/d/1HfzWJXyTC83wqDX3RiTRavI0FCVCNXPV/view?usp=sharing">View Certificate</a>)</p>
+          <p>4. CCNA - Cisco  (<a href="https://drive.google.com/drive/u/2/folders/1HzJiW8U0v2TTFYFPZpDZ9-SjrQWynXQ7">View Certificate</a>)</p>
+          <p>5. Getting Started with AWS Machine Learning - Coursera (<a href="https://drive.google.com/file/d/1HhdPTUURgV7YLpSHaT9nk9m2LhxZCCdj/view?usp=sharing">View Certificate</a>)</p>
+          <p>6. Web Development (<a href="https://drive.google.com/drive/u/2/folders/1IQ7lyu3taq53etynV-X-H5nnuDqCLH_Q">View Certificate</a>)</p>
+          <p>7. Cyber Security - E & ICT Academy, IIT Kanpur(<a href="https://drive.google.com/file/d/1Q-D3tBQRCi7FPlevxl2DdguVsXrK0fiz/view?usp=sharing">View Certificate</a>)</p>
+
+      </a>
+          <div class="button"></div>
+          <div class="topic"></div>
+        </div>
+      </div> 
+      </section>
 
 <!-- Gallery -->
   <section class="Gallery" id="Gallery">
