--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </div>
     </div>
     <div class="menu-btn">
-      <i class="fas fa-bars"></i>
+      <i class="fas fa-bars" style="color:#4070F4;"></i>
     </div>
   </nav>
 
