--- a/index.html
+++ b/index.html
@@ -161,6 +161,20 @@
       <p>STUDENT MANAGEMENT SYSTEM (<a href="https://github.com/Adarshkumar1234/Student-Management-System">Link</a>)</p>
     </div>
 
+<section class="5nd" id="Project"></section>
+    <div class="topic">5.Project</div>
+      <p>COLLEGE CART (<a href="https://github.com/Adarshkumar1234/colleges-cart">Link</a>) To visit <a href="https://www.collegescart.com/">click here</a></p>
+      <p>The project is “College-Cart” web application which provides a
+        platform for buying and selling of ecommerce products such as books,
+        electronic items, software etc. As part of e-commerce platform, Users can
+        sign up and log-in into the application using a general email-id or through
+        social networking platform such as Facebook. Once logged in, Users will
+        then be able to add products to their cart and then checkout for final
+        shipping. Users can also provide review and ratings to the products which
+        they bought. Users can search products based on categories and are
+        made aware of products with special discount offers.</p>
+        </p>
+    </div>
 <!-- Certification-->
     <section class="Certification" id="Certification">
       <div class="content">
